estilização completa e event listeners adicionados

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -1,3 +1,124 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
+
+$bg-color: hsl(218, 23%, 16%);
+$card-color: hsl(217, 19%, 24%);
+$text-color: hsl(193, 38%, 86%);
+$neon-green: hsl(150, 100%, 66%);
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    // outline: 1px solid red;
+}
+
 body {
-    background-color: gray;
+    font-family: 'Manrope', sans-serif;
+    background-color: $bg-color;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.card {
+    max-width: 720px;
+    width: 90%;
+    min-height: 40vh;
+    background-color: $card-color;
+    padding: 4rem 4rem 5rem 4rem;
+    border-radius: 16px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    img {
+        margin-bottom: 2rem;
+    }
+
+    @media (max-width: 545px) {
+        padding: 4rem 2rem
+    }
+}
+
+.img {
+    width: 100%;
+    min-height: 1rem;
+    background-image: url('../images/pattern-divider-desktop.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+
+    @media (max-width: 545px) {
+        background-image: url('../images/pattern-divider-mobile.svg');
+    }
+}
+
+#advice-id {
+    color: $neon-green;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 16px;
+}
+
+.text-div {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#advice-text {
+    color: $text-color;
+    font-size: 28px;
+    text-align: center;
+
+    padding: 2rem 0;
+}
+
+.dice-button {
+    width: 84px;
+    height: 84px;
+    border-radius: 42px;
+    border: none;
+    outline: none;
+
+    background-color: $neon-green;
+    background-image: url('../images/icon-dice.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 32px;
+
+    transform: translateY(-42px);
+
+    cursor: pointer;
+    transition: 0.5s;
+
+    &:hover {
+        box-shadow: 0 0 1rem $neon-green;
+        transition: 0.5s;
+    }
+
+    &:active {
+        box-shadow: 0 0 2rem $neon-green;
+        transition: 0.1s;
+    }
+
+    &:disabled {
+        background-color: darken($color: $neon-green, $amount: 40%);
+        box-shadow: none;
+        transition: 0.2;
+    }
+
+    @media (max-width: 545px) {
+        width: 70px;
+        height: 70px;
+        border-radius: 35px;
+        background-size: 24px;
+        transform: translateY(-35px);
+    }
 }
