--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,158 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
-  background-color: gray;
+  font-family: 'Manrope', sans-serif;
+  background-color: #1f2632;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-height: 100vh;
+}
+
+.card {
+  max-width: 720px;
+  width: 90%;
+  min-height: 40vh;
+  background-color: #323a49;
+  padding: 4rem 4rem 5rem 4rem;
+  border-radius: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.card img {
+  margin-bottom: 2rem;
+}
+
+@media (max-width: 545px) {
+  .card {
+    padding: 4rem 2rem;
+  }
+}
+
+.img {
+  width: 100%;
+  min-height: 1rem;
+  background-image: url("../images/pattern-divider-desktop.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media (max-width: 545px) {
+  .img {
+    background-image: url("../images/pattern-divider-mobile.svg");
+  }
+}
+
+#advice-id {
+  color: #52ffa8;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 16px;
+}
+
+.text-div {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#advice-text {
+  color: #cee3e9;
+  font-size: 28px;
+  text-align: center;
+  padding: 2rem 0;
+}
+
+.dice-button {
+  width: 84px;
+  height: 84px;
+  border-radius: 42px;
+  border: none;
+  outline: none;
+  background-color: #52ffa8;
+  background-image: url("../images/icon-dice.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 32px;
+  -webkit-transform: translateY(-42px);
+          transform: translateY(-42px);
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.dice-button:hover {
+  -webkit-box-shadow: 0 0 1rem #52ffa8;
+          box-shadow: 0 0 1rem #52ffa8;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.dice-button:active {
+  -webkit-box-shadow: 0 0 2rem #52ffa8;
+          box-shadow: 0 0 2rem #52ffa8;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.dice-button:disabled {
+  background-color: #008542;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-transition: 0.2;
+  transition: 0.2;
+}
+
+@media (max-width: 545px) {
+  .dice-button {
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
+    background-size: 24px;
+    -webkit-transform: translateY(-35px);
+            transform: translateY(-35px);
+  }
 }
 /*# sourceMappingURL=styles.css.map */
